<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_movie_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">
    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:alpha="0.50"
        android:contentDescription="@string/movie_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/img_info"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="movie image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:textColor="@color/text_color4"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/img_info"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp"
        tools:text="@string/default_rate" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txt_rate"
        android:text="@string/movie_title"
        android:textColor="@color/text_color4"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_rate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txt_rate"
        android:text="@string/movie_rating"
        android:textColor="@color/text_color4"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_rate"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_release"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_info"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/movie_description"
        android:textColor="@color/text_color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_info"
        app:layout_constraintTop_toBottomOf="@+id/txt_release" />

    <View
        android:id="@+id/line_id"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_info"
        app:layout_constraintTop_toBottomOf="@+id/txt_description" />

    <TextView
        android:id="@+id/txt_more_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_id"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_info"
        android:text="@string/more_info"
        android:textColor="@color/text_color4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_info"
        app:layout_constraintTop_toBottomOf="@+id/line_id" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_info"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>